# abcfood-mm-core

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  main.py  slash_commands.yaml
app/api/: deps.py
app/api/v1/: approvals.py  context.py  digest.py  health.py  metrics.py  pending.py  router.py  slash.py
app/clients/: clickhouse.py  frappe.py  metabase.py  odoo.py  postgres.py
app/core/: auth.py  config.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  audit.py  enums.py  schemas.py
app/services/: approval_service.py  audit_service.py  context_service.py  digest_service.py  metrics_service.py  slash_command_service.py
app/utils/: time.py
tests/: conftest.py  test_health.py
